add_library(instructions "")

target_sources(instructions
        PRIVATE
            Group1.cpp
            Group2.cpp
            Group3.cpp
            Group4.cpp
            Group5.cpp
            Group6.cpp
            Group7.cpp
            Group8.cpp
            Group9.cpp
            Group10.cpp
            Group11.cpp
            Group12.cpp
            Group13.cpp
            Group14.cpp
            Group15.cpp
            Group16.cpp
        PUBLIC
            ${CMAKE_CURRENT_LIST_DIR}/Group1.h
            ${CMAKE_CURRENT_LIST_DIR}/Group2.h
            ${CMAKE_CURRENT_LIST_DIR}/Group3.h
            ${CMAKE_CURRENT_LIST_DIR}/Group4.h
            ${CMAKE_CURRENT_LIST_DIR}/Group5.h
            ${CMAKE_CURRENT_LIST_DIR}/Group6.h
            ${CMAKE_CURRENT_LIST_DIR}/Group7.h
            ${CMAKE_CURRENT_LIST_DIR}/Group8.h
            ${CMAKE_CURRENT_LIST_DIR}/Group9.h
            ${CMAKE_CURRENT_LIST_DIR}/Group10.h
            ${CMAKE_CURRENT_LIST_DIR}/Group11.h
            ${CMAKE_CURRENT_LIST_DIR}/Group12.h
            ${CMAKE_CURRENT_LIST_DIR}/Group13.h
            ${CMAKE_CURRENT_LIST_DIR}/Group14.h
            ${CMAKE_CURRENT_LIST_DIR}/Group15.h
            ${CMAKE_CURRENT_LIST_DIR}/Group16.h
        )

target_include_directories(instructions
        PUBLIC
            ${CMAKE_CURRENT_LIST_DIR}
        )